[SCRUM-81]: Scrollbar fixes (#120)

--- a/src/index.css
+++ b/src/index.css
@@ -82,48 +82,6 @@
 		@apply bg-background text-foreground;
 	}
 
-	/*scroll-bar-styles-START*/
-
-	/* WebKit scrollbar styles (Chrome, Safari) */
-	::-webkit-scrollbar {
-		width: 8px;
-		height: 8px;
-	}
-
-	/* Track */
-	::-webkit-scrollbar-track {
-		background-color: rgb(243 244 246);
-		border-radius: 9999px;
-	}
-
-	/* [&::-webkit-scrollbar]:w-2
-  [&::-webkit-scrollbar-track]:rounded-full
-  [&::-webkit-scrollbar-track]:bg-gray-100
-  [&::-webkit-scrollbar-thumb]:rounded-full
-  [&::-webkit-scrollbar-thumb]:bg-gray-300
-  dark:[&::-webkit-scrollbar-track]:bg-neutral-700
-  dark:[&::-webkit-scrollbar-thumb]:bg-neutral-50 */
-
-	/* Handle */
-	::-webkit-scrollbar-thumb {
-		background-color: rgb(209 213 219);
-		border-radius: 9999px;
-	}
-
-	/* Handle on hover */
-	::-webkit-scrollbar-thumb:hover {
-		background: black;
-	}
-
-	/* Firefox scrollbar styles */
-	* {
-		scrollbar-width: thin;
-		/* "auto" or "thin" */
-		scrollbar-color: transparent transparent;
-		/* scroll thumb and track */
-	}
-
-	/*scroll-bar-styles-END*/
 
 	.or-tagline {
 		@apply relative bg-transparent text-center z-[1];
